fix: fix horizontal scroll bar issue

--- a/src/components/about/about.module.scss
+++ b/src/components/about/about.module.scss
@@ -2,10 +2,10 @@
     position: relative;
     // top: 50;
     // right: 0;
-    margin: 100px 25px 0px 0px;
+    margin: 100px 0px 0px 0px;
     z-index: 4;
 
-    width: 100%;
+    width: 100vw;
     height: 100px;
 
     display: inline-block;
