--- a/src/components/about/content.module.scss
+++ b/src/components/about/content.module.scss
@@ -1,14 +1,12 @@
 .content {
-    width: 100%;
+    width: 100vw;
     height: 100%;
 }
 
 .rows {
-    position: relative;
-    left: 50%;
-    transform: translate(-50%, 0);
-
-    width: 80%;
+    width: 100%;
+    padding-left: 5vw;
+    padding-right: 5vw;
 
     font-weight: 400;
 
@@ -23,17 +21,20 @@
     // tablet
     @media(min-width: 900px) {
         top: 20%;
-        width: 60vw;
+        padding-left: 20vw;
+        padding-right: 20vw;
     }
 
     // pc
     @media(min-width: 1400px) {
-        width: 40vw;
+        padding-left: 30vw;
+        padding-right: 30vw;
     }
 
     // 2k
     @media(min-width: 2000px) {
-        width: 35vw;
+        padding-left: 32.5vw;
+        padding-right: 32.5vw;
     }
 }
 
