--- a/src/components/layouts/title.scss
+++ b/src/components/layouts/title.scss
@@ -54,7 +54,7 @@
     position: fixed;
     top: 0;
     right: 0;
-    margin: 25px 25px 0px 0px;
+    margin: 25px 0px 0px 0px;
     z-index: 5;
 
     width: 400px;
